# fastapi-official-document-sql

./: .gitignore  README.md  pyproject.toml
src/: crud.py  main.py  models.py  schemas.py
